WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275778
[GStreamer][MSE] Improved error handling in webkitmediasrc
https://bugs.webkit.org/show_bug.cgi?id=275778
Summary
[GStreamer][MSE] Improved error handling in webkitmediasrc
Philippe Normand
Reported
2024-06-22 07:06:18 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-06-22 07:10:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30084
EWS
Comment 2
2024-06-24 01:37:58 PDT
Committed
280297@main
(0b3e3c5ec50b): <
https://commits.webkit.org/280297@main
> Reviewed commits have been landed. Closing PR #30084 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-06-24 01:38:13 PDT
<
rdar://problem/130399389
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug