[GStreamer][MSE] Improved error handling in webkitmediasrc https://bugs.webkit.org/show_bug.cgi?id=275778

Reviewed by Alicia Boya Garcia.

If we fail to push a buffer downstream we should post an error on the bus, GST_ELEMENT_ERROR takes
care of that. In that case the error message will be handled in the player, which will also dump the
pipeline graph, so there is no need to do that anymore from the source element.

Driving-by, the pipeline dumps generated by webkitmediasrc are now named according to the pipeline
they belong to, instead of hardcoding "playback-pipeline".

* Source/WebCore/platform/graphics/gstreamer/mse/WebKitMediaSourceGStreamer.cpp:
(dumpPipeline):
(webKitMediaSrcLoop):

Canonical link: https://commits.webkit.org/280297@main